--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,30 @@
 name = "metalbond_rs"
 version = "0.1.0"
 edition = "2021"
+default-run = "metalbond-server"
+
+[lib]
+name = "metalbond"
+path = "src/lib.rs"
+
+[[bin]]
+name = "metalbond-server"
+path = "src/bin/server.rs"
+
+[[bin]]
+name = "metalbond-client"
+path = "src/bin/client.rs"
+required-features = ["netlink-support"]
+
+[features]
+default = []
+netlink-support = [
+    "rtnetlink",
+    "netlink-packet-route",
+    "netlink-packet-core",
+    "netlink-sys",
+    "nix",
+]
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
@@ -20,18 +44,24 @@ axum = "0.7"
 askama = { version = "0.12" }
 futures = "0.3"
 rand = "0.8"
-ipnet = { version = "2", features = ["serde"] } # Enable serde feature
-rtnetlink = "0.14"
-netlink-packet-route = "0.19.0" # Downgraded to match rtnetlink dependency
-netlink-packet-core = "0.7"
-netlink-sys = "0.8"
-
-# For netlink get_addr
-nix = { version = "0.29", features = ["net", "feature"] }
+ipnet = { version = "2", features = ["serde"] }
 async-trait = "0.1.88"
 chrono = "0.4.40"
 
+# Conditional dependencies
+rtnetlink = { version = "0.14", optional = true }
+netlink-packet-route = { version = "0.19.0", optional = true }
+netlink-packet-core = { version = "0.7", optional = true }
+netlink-sys = { version = "0.8", optional = true }
+nix = { version = "0.29", features = ["net", "feature"], optional = true }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+rtnetlink = "0.14"
+netlink-packet-route = "0.19.0"
+netlink-packet-core = "0.7"
+netlink-sys = "0.8"
+nix = { version = "0.29", features = ["net", "feature"] }
 
 [build-dependencies]
 prost-build = "0.12"
-askama = "0.12" # Add askama here as well
+askama = "0.12"
