--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,8 +40,7 @@ thiserror = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml = "0.9"
-axum = "0.7"
-askama = { version = "0.12" }
+actix-web = "4.4"
 futures = "0.3"
 rand = "0.8"
 ipnet = { version = "2", features = ["serde"] }
@@ -64,4 +63,3 @@ nix = { version = "0.29", features = ["net", "feature"] }
 
 [build-dependencies]
 prost-build = "0.12"
-askama = "0.12"
