--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "metalbond_rs"
 version = "0.1.0"
 edition = "2021"
 default-run = "metalbond-server"
+resolver = "2"
 
 [lib]
 name = "metalbond"
@@ -15,7 +16,6 @@ path = "src/bin/server.rs"
 [[bin]]
 name = "metalbond-client"
 path = "src/bin/client.rs"
-required-features = ["netlink-support"]
 
 [features]
 default = []
@@ -54,6 +54,7 @@ netlink-packet-core = { version = "0.7", optional = true }
 netlink-sys = { version = "0.8", optional = true }
 nix = { version = "0.29", features = ["net", "feature"], optional = true }
 
+# Linux-specific dependencies automatically enable netlink support
 [target.'cfg(target_os = "linux")'.dependencies]
 rtnetlink = "0.14"
 netlink-packet-route = "0.19.0"
